Fix display on small screen sizes

--- a/web/main.css
+++ b/web/main.css
@@ -18,7 +18,7 @@ body {
 .data-container {
   float: left;
   padding: 12px;
-  width: 640px;
+  width: 50%;
 }
 
 #discussions-container {
